[package]
edition = "2021"
name = "deja-vu-wasm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.13.0"
derive_builder = "0.11.2"
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0.86"
serde_urlencoded = "0.7"
url = {version = "2", features = ["serde"]}
wasm-bindgen = "0.2.81"

[profile.dev]
overflow-checks = false

[profile.release]
opt-level = "s"
overflow-checks = false
